
add_executable(test1_epoll test1_epoll.cpp)
add_executable(test2_timer test2_timer.cpp)
add_executable(test3_client test3_client.cpp)
add_executable(test4_server test4_server.cpp)
add_executable(test6_signal test6_signal.cpp)
add_executable(test7_eventfd test7_eventfd.cpp)
add_executable(test5_nonblock_read test5_nonblock_read.cpp)
add_executable(test5_nonblock_send test5_nonblock_send.cpp)
add_executable(test_connect test_connect.cpp)
